# antigen-forecasting

./: .gitignore  404.html  LICENSE  README.md  environment.yaml  index.html  install_dev.sh  mkdocs.yml  pyproject.toml  setup.py
antigentools/: __init__.py  analysis.py  antigen_reader.py  paths.py  plot.py  publication_style.py  utils.py
calculating_fitness/: index.html
config/: minimal_config.json
configs/: benchmark_config.yaml  default_config.json  mlr_config.json  pipeline_config.yaml  slurm_config.yaml  weights_per_site_for_clades.json
docs/: aggregate_simulations.md  calculating_fitness.md  empirical_growth_rates.md  growth_advantage_models.md  index.md  model_configuration.md  running_simulations.md  variant_assignment.md
empirical_growth_rates/: index.html
growth_advantage_models/: index.html
model_configuration/: index.html
notebooks/: analysis-window-peep.ipynb  antigen-data-prep.ipynb  antigen-simulation-validation.ipynb  antigenic-seq-cluster-compare.ipynb  fit-all-models.ipynb  fitness-corr.ipynb  growth-rate-inference-plots.ipynb  manuscript-figure-2-simulation-summary.ipynb  manuscript-figure-3-training-window-schematic.ipynb  manuscript-figure-3-variant-assignment-compare.ipynb  manuscript-figure-3-variant-assignment-fitness-compare.ipynb  manuscript-figure-3.ipynb  manuscript-figure-4-freq-errors.ipynb  manuscript-figure-4-growth-rate-inference-plots.ipynb  manuscript-figure-5-growth-rate-errors.ipynb  manuscript-figure-7-variant-assignment-eval.ipynb  manuscript-figure-8-training-window-schematic.ipynb  model-results.ipynb  slurm.ipynb  (+8 more)
(+7968 files in other folders)
